--- a/service-starter/src/main/resources/api/schemas/account/AccountRequestPost.yml
+++ b/service-starter/src/main/resources/api/schemas/account/AccountRequestPost.yml
@@ -30,6 +30,7 @@ components:
           type: string
         language:
           type: string
+          maxLength: 5
         gymMember:
           type: boolean
         phoneNumber:
