--- a/service-starter/src/main/resources/api/schemas/account/AccountRequestResetPassword.yml
+++ b/service-starter/src/main/resources/api/schemas/account/AccountRequestResetPassword.yml
@@ -9,12 +9,6 @@ components:
   schemas:
     AccountRequestPut:
       properties:
-        firstName:
+        password:
           type: string
-        lastName:
-          type: string
-        language:
-          type: string
-          maxLength: 5
-        gymMember:
-          type: boolean
+          pattern: "^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$"
