Configure transactional processing

--- a/service-starter/src/main/resources/application.properties
+++ b/service-starter/src/main/resources/application.properties
@@ -12,3 +12,7 @@ api.yaml.source.code.filepath=src/main/resources/api/api.yml
 logback.file.path=./service-starter/src/main/resources/logs/logs
 logback.console.pattern=%cyan(%d{dd-MM-yyyy HH:mm:ss}) [%thread] %lvl_colors(%-5level) %logger{36} - %lvl_colors(%msg%n)
 logback.file.pattern=%d{dd-MM-yyyy HH:mm:ss} %p %c{1.} [%thread] %m%n
+
+#Transaction retry
+retry.maxAttempts=3
+retry.maxDelay=100
