--- a/core/application/pom.xml
+++ b/core/application/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <spring.retry.version>1.3.1</spring.retry.version>
     </properties>
 
     <dependencies>
@@ -40,6 +41,11 @@
             <artifactId>primary</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>${spring.retry.version}</version>
         </dependency>
     </dependencies>
 
