Add capacity field to activity

--- a/service-starter/src/main/resources/api/schemas/activity/ActivityRequestPost.yml
+++ b/service-starter/src/main/resources/api/schemas/activity/ActivityRequestPost.yml
@@ -14,6 +14,7 @@ components:
         - startDate
         - duration
         - trainer
+        - capacity
       properties:
         number:
           type: string
@@ -28,3 +29,5 @@ components:
           minimum: 1
         trainer:
           type: string
+        capacity:
+          type: integer
