--- a/service-starter/src/main/resources/api/schemas/activity/ActivityResponse.yml
+++ b/service-starter/src/main/resources/api/schemas/activity/ActivityResponse.yml
@@ -24,3 +24,5 @@ components:
           $ref: '../account/AccountGeneralResponse.yml#/components/schemas/AccountGeneralResponse'
         active:
           type: boolean
+        capacity:
+          type: integer
