--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <jsonwebtoken.jjwt.version>0.9.1</jsonwebtoken.jjwt.version>
         <hibernate.validator.version>6.1.6.Final</hibernate.validator.version>
+        <junit.jupiter.version>5.8.1</junit.jupiter.version>
     </properties>
     <dependencies>
         <dependency>
@@ -89,6 +90,12 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate.validator.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
