--- a/service-starter/src/main/resources/application.properties
+++ b/service-starter/src/main/resources/application.properties
@@ -16,3 +16,20 @@ logback.file.pattern=%d{dd-MM-yyyy HH:mm:ss} %p %c{1.} [%thread] %m%n
 #Transaction retry
 retry.maxAttempts=3
 retry.maxDelay=100
+
+#Preferential algorithm constants
+algorithm.activity.absence=0.3
+algorithm.activity.presence=1.5
+algorithm.activity.first-on-list=1.3
+algorithm.activity.difference-between-users-on-list=0.05
+algorithm.membership=2
+algorithm.diet-adding=1.1
+algorithm.diet-removing=0.91
+algorithm.training-plan-adding=1.1
+algorithm.training-plan-removing=0.91
+
+#Preferential algorithm intervals [ms]
+#each day at 12am
+algorithm.cron.presence = 0 12 * * ?
+#each 1st day of month at 12am
+algorithm.cron.membership = 0 12 1 * ?
