Correct exceptions & minor fixes

--- a/service-starter/src/main/resources/application.properties
+++ b/service-starter/src/main/resources/application.properties
@@ -30,6 +30,6 @@ algorithm.training-plan-removing=0.91
 
 #Preferential algorithm intervals [ms]
 #each day at 12am
-algorithm.cron.presence = 0 20 * * ?
+algorithm.cron.presence = 0 0 22 * * ?
 #each 1st day of month at 12am
-algorithm.cron.membership = 0 8 1 * ?
+algorithm.cron.membership = 0 0 8 1 * ?
