--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,16 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
+    "i18next": "^21.5.6",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "joi": "^17.5.0",
+    "joi-phone-number": "^5.0.1",
+    "momentjs": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.14.3",
+    "react-router": "^5.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -34,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.2.1"
   }
 }
