--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@popperjs/core": "^2.11.0",
+    "@syncfusion/ej2-react-calendars": "^19.3.56",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -10,13 +13,21 @@
     "i18next": "^21.5.6",
     "i18next-browser-languagedetector": "^6.1.2",
     "joi": "^17.5.0",
+    "joi-i18n": "^13.1.4",
     "joi-phone-number": "^5.0.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "momentjs": "^2.0.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-calendar": "^3.5.0",
+    "react-datetime-picker": "^3.4.3",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.14.3",
+    "react-picky-date-time": "^1.7.4",
     "react-router": "^5.2.1",
     "react-scripts": "4.0.3",
+    "sassy-datepicker": "^0.6.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -44,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@joi/date": "^2.1.0",
     "react-router-dom": "^5.2.1"
   }
 }
