--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "joi": "^17.5.0",
     "joi-i18n": "^13.1.4",
     "joi-phone-number": "^5.0.1",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "momentjs": "^2.0.0",
