Fix accounts, add filter for handling security exceptions, fill accounts and accountDetails csvs

--- a/backend/service-starter/src/main/resources/api/schemas/account/AccountRequestPut.yml
+++ b/backend/service-starter/src/main/resources/api/schemas/account/AccountRequestPut.yml
@@ -18,3 +18,8 @@ components:
           maxLength: 5
         gymMember:
           type: boolean
+        phoneNumber:
+          type: string
+          pattern: "^[0-9]{9,12}$"
+        active:
+          type: boolean
