--- a/backend/service-starter/src/main/resources/application.properties
+++ b/backend/service-starter/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/Gym
+spring.datasource.url=jdbc:postgresql://localhost:5432/Gym?stringtype=unspecified
 spring.datasource.username=gym_admin
 spring.datasource.password=gym_admin1234
 spring.jpa.hibernate.ddl-auto=none
