Fix & init training plans

--- a/backend/service-starter/src/main/resources/api/schemas/training/TrainingPlanRequestPost.yml
+++ b/backend/service-starter/src/main/resources/api/schemas/training/TrainingPlanRequestPost.yml
@@ -9,6 +9,13 @@ components:
   schemas:
     TrainingPlanRequestPost:
       type: object
+      required:
+        - number
+        - name
+        - trainingType
+        - personalTrainingsNumber
+        - trainer
+        - price
       properties:
         number:
           type: string
