--- a/backend/service-starter/src/main/resources/api/schemas/diet/DietResponse.yml
+++ b/backend/service-starter/src/main/resources/api/schemas/diet/DietResponse.yml
@@ -11,10 +11,10 @@ components:
       properties:
         number:
           type: string
-        name:
+        title:
           type: string
         dietType:
-          $ref: '../diet/DietType.yml#/components/schemas/DietType'
+          type: string
         calories:
           type: integer
         mealsNumber:
