--- a/backend/service-starter/src/main/resources/api/schemas/diet/DietRequestPut.yml
+++ b/backend/service-starter/src/main/resources/api/schemas/diet/DietRequestPut.yml
@@ -9,7 +9,7 @@ components:
   schemas:
     DietRequestPut:
       properties:
-        name:
+        title:
           type: string
         dietType:
           type: string
