--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "i18next": "^21.5.6",
     "i18next-browser-languagedetector": "^6.1.2",
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@joi/date": "^2.1.0",
-    "react-router-dom": "^5.2.1"
+    "react-router-dom": "^5.2.1",
+    "react-toastify": "^8.1.0"
   }
 }
