--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,3 +1,6 @@
 {
-  "apiUrl": "http://localhost:8080"
+  "apiUrl": "http://localhost:8080",
+  "ADMIN": "ADMIN",
+  "CLIENT": "CLIENT",
+  "TRAINER": "TRAINER"
 }
