Fix Overflow error by removing unnecessary references in dtos, add methods for listing own diets and training plans, change response code to 201 in adding diets

--- a/backend/service-starter/src/main/resources/api/api.yml
+++ b/backend/service-starter/src/main/resources/api/api.yml
@@ -43,16 +43,19 @@ paths:
     $ref: './paths/account/AccountByLogin.yml'
 
   /accounts/{login}/trainingPlans:
-    $ref: './paths/account/AccountByLogin.yml#/trainingPlan/add'
+    $ref: './paths/account/AccountByLogin.yml#/trainingPlan/withoutParam'
 
   /accounts/{login}/trainingPlans/{number}:
     $ref: './paths/account/AccountByLogin.yml#/trainingPlan/remove'
 
   /accounts/{login}/diets:
-    $ref: './paths/account/AccountByLogin.yml#/diet/add'
+    $ref: './paths/account/AccountByLogin.yml#/diet/withoutParam'
 
   /accounts/{login}/diets/{number}:
     $ref: './paths/account/AccountByLogin.yml#/diet/remove'
+
+  /accounts/{login}/bookings:
+    $ref: './paths/account/AccountByLogin.yml#/booking'
 
   /authenticate:
     $ref: './paths/account/Authenticate.yml'
