--- a/backend/service-starter/src/main/resources/api/schemas/accessLevel/AccessLevelRequestPost.yml
+++ b/backend/service-starter/src/main/resources/api/schemas/accessLevel/AccessLevelRequestPost.yml
@@ -10,7 +10,7 @@ components:
     AccessLevelRequestPost:
       required:
         - level
-        - accountLogin
+        - account
       properties:
         level:
           type: string
@@ -18,5 +18,5 @@ components:
             - CLIENT
             - ADMIN
             - TRAINER
-        accountLogin:
+        account:
           type: string
