--- a/backend/service-starter/src/main/resources/api/schemas/accessLevel/AccessLevelResponse.yml
+++ b/backend/service-starter/src/main/resources/api/schemas/accessLevel/AccessLevelResponse.yml
@@ -16,6 +16,6 @@ components:
         active:
           type: boolean
         createdBy:
-          $ref: '../account/AccountGeneralResponse.yml#/components/schemas/AccountGeneralResponse'
+          type: string
         modifiedBy:
-          $ref: '../account/AccountGeneralResponse.yml#/components/schemas/AccountGeneralResponse'
+          type: string
