--- a/backend/service-starter/src/main/resources/api/schemas/BaseDto.yml
+++ b/backend/service-starter/src/main/resources/api/schemas/BaseDto.yml
@@ -22,6 +22,6 @@ components:
           type: string
           format: date-time
         createdBy:
-          $ref: 'account/AccountGeneralResponse.yml#/components/schemas/AccountGeneralResponse'
+          type: string
         modifiedBy:
-          $ref: 'account/AccountGeneralResponse.yml#/components/schemas/AccountGeneralResponse'
+          type: string
