--- a/backend/service-starter/src/main/resources/api/schemas/activity/ActivityRequestPut.yml
+++ b/backend/service-starter/src/main/resources/api/schemas/activity/ActivityRequestPut.yml
@@ -9,7 +9,7 @@ components:
   schemas:
     ActivityRequestPut:
       properties:
-        name:
+        title:
           type: string
         startDate:
           type: string
