--- a/backend/service-starter/src/main/resources/api/schemas/training/TrainingPlanResponse.yml
+++ b/backend/service-starter/src/main/resources/api/schemas/training/TrainingPlanResponse.yml
@@ -11,7 +11,7 @@ components:
       properties:
         number:
           type: string
-        name:
+        title:
           type: string
         trainingType:
           type: string
