--- a/backend/service-starter/src/main/resources/api/schemas/training/TrainingPlanRequestPost.yml
+++ b/backend/service-starter/src/main/resources/api/schemas/training/TrainingPlanRequestPost.yml
@@ -10,17 +10,17 @@ components:
     TrainingPlanRequestPost:
       type: object
       required:
-        - number
-        - name
+        - trainingPlanNumber
+        - title
         - trainingType
         - personalTrainingsNumber
         - trainer
         - price
       properties:
-        number:
+        trainingPlanNumber:
           type: string
           pattern: "^TRA[0-9]{3}$"
-        name:
+        title:
           type: string
         trainingType:
           type: string
