--- a/backend/service-starter/src/main/resources/api/schemas/training/TrainingPlanRequestPut.yml
+++ b/backend/service-starter/src/main/resources/api/schemas/training/TrainingPlanRequestPut.yml
@@ -10,7 +10,7 @@ components:
     TrainingPlanRequestPut:
       type: object
       properties:
-        name:
+        title:
           type: string
         personalTrainingsNumber:
           type: integer
