--- a/backend/service-starter/src/main/resources/application.properties
+++ b/backend/service-starter/src/main/resources/application.properties
@@ -33,3 +33,6 @@ algorithm.training-plan-removing=0.91
 algorithm.cron.presence = 0 0 22 * * ?
 #each 1st day of month at 12am
 algorithm.cron.membership = 0 0 8 1 * ?
+
+#Activity cancellation deadline(min)
+algorithm.activity.cancellation.deadline=60
