Implement account confirmation, implement email service and do some minor fixes

--- a/backend/service-starter/src/main/resources/api/api.yml
+++ b/backend/service-starter/src/main/resources/api/api.yml
@@ -55,7 +55,10 @@ paths:
     $ref: './paths/account/AccountByLogin.yml#/diet/remove'
 
   /authenticate:
-    $ref: './paths/account/Authenticate.yml'
+    $ref: './paths/account/Authenticate.yml#/authenticate'
+
+  /confirmRegistration/{token}:
+    $ref: './paths/account/Authenticate.yml#/confirm'
 
   /trainingPlans:
     $ref: './paths/training/TrainingPlan.yml'
