--- a/backend/service-starter/src/main/resources/application.properties
+++ b/backend/service-starter/src/main/resources/application.properties
@@ -36,3 +36,16 @@ algorithm.cron.membership = 0 0 8 1 * ?
 
 #Activity cancellation deadline(min)
 algorithm.activity.cancellation.deadline=60
+
+#Mailing service
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=gymaniac77
+spring.mail.password=ncwzheuckpaejqzl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+email.address=gymaniac77@gmail.com
+
+#Disposable urls
+#24h
+url.expiration.time=24
