--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -32,6 +32,7 @@
         <jsonwebtoken.jjwt.version>0.9.1</jsonwebtoken.jjwt.version>
         <hibernate.validator.version>6.1.6.Final</hibernate.validator.version>
         <junit.jupiter.version>5.8.1</junit.jupiter.version>
+        <spring.mail.version>2.6.2</spring.mail.version>
     </properties>
     <dependencies>
         <dependency>
@@ -49,6 +50,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>${spring.mail.version}</version>
         </dependency>
 
         <dependency>
