--- a/backend/service-starter/src/main/resources/api/paths/account/Authenticate.yml
+++ b/backend/service-starter/src/main/resources/api/paths/account/Authenticate.yml
@@ -1,20 +1,38 @@
-post:
-  tags:
-    - auth
-  summary: Authenticate
-  description: Authenticate using login and password
-  operationId: authenticate
-  requestBody:
-    required: true
-    content:
-      application/json:
-        schema:
-          $ref: '../../schemas/account/CredentialsRequest.yml#/components/schemas/CredentialsRequest'
-  responses:
-    201:
-      description: Operation successful
+authenticate:
+  post:
+    tags:
+      - auth
+    summary: Authenticate
+    description: Authenticate using login and password
+    operationId: authenticate
+    requestBody:
+      required: true
       content:
         application/json:
           schema:
-            type: string
-            description: User's token
+            $ref: '../../schemas/account/CredentialsRequest.yml#/components/schemas/CredentialsRequest'
+    responses:
+      201:
+        description: Operation successful
+        content:
+          application/json:
+            schema:
+              type: string
+              description: User's token
+
+confirm:
+  get:
+    tags:
+      - auth
+    summary: Confirm registration
+    description: Confirm registration via previously sent confirmation link
+    operationId: confirmRegistration
+    parameters:
+      - in: path
+        name: token
+        schema:
+          type: string
+        required: true
+    responses:
+      200:
+        description: Operation successful
